<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>test_pub_blocking_time</name>
    <version>1.0.0</version>
    <description>Test publish blocking time</description>
    <maintainer email="alastair.j.quadros@gmail.com">Alastair Quadros</maintainer>
    <license>Apache</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>

    <export><build_type>ament_cmake</build_type></export>
</package>
